--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,4 +7,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Raleway', -apple-system, sans-serif;
+  background-color: #16131a;
+  color: #ffffff;
 }
